# nvim-test-rs

./: Cargo.toml
nvim-test/: Cargo.toml
src/: main.rs
