workspace = { members = ["nvim-test"] }
[package]
name = "nvim-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvim-oxi = { version = "0.4.1", features = ["libuv", "miniserde", "mlua", "neovim-nightly", "test"] }
